5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1807_2564.log
== SUBMITION (2019-06-11 16:06:50) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversráio: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.11345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 12, in <module>
    elif vet[1] == vet[2]:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:06:56) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversráio: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:10:09) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversráio: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:11:40) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.07685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 12, in <module>
    elif vet[1] == vet[2]:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:12:21) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:13:04) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.13842
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2564/main.py", line 12, in <module>
    elif vet1[1] == vet[2]:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:07) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet[2]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:15:03) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet2[1]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
0.989671
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 5 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  0  1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:15) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet2[1]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:15:55) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet2[1]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.18579
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 5 0]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  0  1]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:58) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[1] == vet2[1]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:17:06) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(0, len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[i] == vet2[i]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.19311
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:40:31) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[i] == vet2[i]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
0.989061
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:43) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[i] == vet2[i]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:40:46) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[i] == vet2[i]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:41:15) 
-- CODE:
from numpy import *

vet1 = array(eval(input("Gol do time: ")))
vet2 = array(eval(input("Gol do adversario: ")))

vcont = zeros(3,dtype=int)

for i in range(len(vet1)):
	if vet1[i] > vet2[i]:
		vcont[0] = vcont[0] + 1
		
	elif vet1[i] == vet2[i]:
		vcont[1] = vcont[1] + 1
		
	else:
		vcont[2] = vcont[2] + 1
		
print(vcont)

-- EXECUTION TIME:
1.11064
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
